--- a/requirements.txt
+++ b/requirements.txt
@@ -18,7 +18,7 @@ torchaudio==2.1.1
 
 # 文本转语音 (TTS)
 TTS==0.20.6
-espeak==1.0.3
+# espeak-ng 需要系统级安装: brew install espeak-ng
 
 # 大语言模型
 openai==1.3.7
@@ -30,8 +30,7 @@ opencv-python==4.8.1.78
 Pillow==10.1.0
 pygame==2.5.2
 
-# UI界面
-tkinter-page==0.0.4
+# UI界面  
 customtkinter==5.2.2
 
 # 配置和日志
