--- a/requirements.txt
+++ b/requirements.txt
@@ -31,9 +31,10 @@ Pillow==10.1.0
 pygame==2.5.2
 
 # 推流和视频输出
-pyvirtualcam==0.11.1
+# pyvirtualcam==0.11.1  # 在某些系统上不可用，特别是macOS
+# 替代方案: 使用OBS Virtual Camera或其他虚拟摄像头解决方案
 mss==9.0.1
-obs-websocket-py==1.6.1
+obs-websocket-py==1.0
 
 # UI界面  
 customtkinter==5.2.2
