--- a/requirements.txt
+++ b/requirements.txt
@@ -1,56 +1,59 @@
-# 核心依赖
-fastapi==0.104.1
-uvicorn==0.24.0
-pydantic==2.5.0
-pydantic-settings==2.1.0
+# Parrot Engine - 完整依赖包
+# 一次性安装所有必要的依赖
 
-# 音频处理
-pyaudio==0.2.11
-soundfile==0.12.1
-librosa==0.10.1
-numpy==1.24.3
-scipy==1.11.4
+# ========== 核心框架 ==========
+fastapi>=0.100.0
+uvicorn>=0.20.0
+pydantic>=2.0.0
+pydantic-settings>=2.0.0
 
-# 语音识别 (ASR)
-openai-whisper==20231117
-torch==2.1.1
-torchaudio==2.1.1
+# ========== 音频处理 ==========
+pyaudio>=0.2.11
+soundfile>=0.12.0
+librosa>=0.10.0
+numpy>=1.21.0,<1.25.0
+scipy>=1.10.0
 
-# 文本转语音 (TTS)
-TTS==0.20.6
-# espeak-ng 需要系统级安装: brew install espeak-ng
+# ========== AI和机器学习 ==========
+torch>=2.0.0
+torchaudio>=2.0.0
+openai-whisper>=20231117
+scikit-learn>=1.1.0
 
-# 大语言模型
-openai==1.3.7
-anthropic==0.8.1
-httpx==0.25.2
+# ========== LLM客户端 ==========
+openai>=1.0.0
+anthropic>=0.8.0
+httpx>=0.25.0
 
-# Live2D和图形
-opencv-python==4.8.1.78
-Pillow==10.1.0
-pygame==2.5.2
+# ========== 图形和界面 ==========
+opencv-python>=4.8.0
+Pillow>=10.0.0
+pygame>=2.5.0
+customtkinter>=5.2.0
 
-# 推流和视频输出
-# pyvirtualcam==0.11.1  # 在某些系统上不可用，特别是macOS
-# 替代方案: 使用OBS Virtual Camera或其他虚拟摄像头解决方案
-mss==9.0.1
-obs-websocket-py==1.0
+# ========== 推流和输出 ==========
+mss>=9.0.0
+obs-websocket-py>=1.0
+# pyvirtualcam  # macOS上不可用，使用OBS Virtual Camera替代
 
-# UI界面  
-customtkinter==5.2.2
+# ========== 配置和日志 ==========
+PyYAML>=6.0.0
+python-dotenv>=1.0.0
+loguru>=0.7.0
 
-# 配置和日志
-PyYAML==6.0.1
-python-dotenv==1.0.0
-loguru==0.7.2
+# ========== 网络和异步 ==========
+websockets>=12.0
+aiofiles>=23.0.0
+requests>=2.31.0
+asyncio-mqtt>=0.13.0
 
-# 异步和并发
-asyncio-mqtt==0.13.0
-websockets==12.0
-aiofiles==23.2.1
+# ========== 数据处理 ==========
+dataclasses-json>=0.6.0
+marshmallow>=3.20.0
 
-# 工具库
-typing-extensions==4.8.0
-dataclasses-json==0.6.2
-marshmallow==3.20.1
-requests==2.31.0 
+# ========== 自动安装的依赖 ==========
+# 以下包会自动安装，无需单独指定
+# - numba (librosa依赖)
+# - tiktoken (openai-whisper依赖)
+# - joblib (scikit-learn依赖)
+# - more-itertools (openai-whisper依赖) 
